src1/server/docker/k8s/80-suggestio/15-ingress-legacy-monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-suggest-io
  namespace: default
spec:
  type: ExternalName
  externalName: monitoring.suggest.io
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-suggest-io
  namespace: default
spec:
  rules:
  - host: monitoring.cbca.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-suggest-io
            port:
              number: 80
---
